--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -6,10 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Nexus - AI-Powered SSH Terminal</title>
 		
-		<!-- Load xterm.js and addons -->
-		<script src="https://cdn.jsdelivr.net/npm/xterm@5.3.0/lib/xterm.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/xterm-addon-fit@0.8.0/lib/xterm-addon-fit.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/xterm-addon-web-links@0.9.0/lib/xterm-addon-web-links.js"></script>
+		<!-- Load xterm.js CSS and JS -->
+		<link rel="stylesheet" href="https://unpkg.com/xterm@5.3.0/css/xterm.css" />
+		<script src="https://unpkg.com/xterm@5.3.0/lib/xterm.js"></script>
+		<script src="https://unpkg.com/xterm-addon-fit@0.8.0/lib/xterm-addon-fit.js"></script>
+		<script src="https://unpkg.com/xterm-addon-web-links@0.9.0/lib/xterm-addon-web-links.js"></script>
 		
 		%sveltekit.head%
 	</head>
